<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="vertical"
    tools:context=".MainFragment"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="8dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/primeiro" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20sp"
            android:padding="5dp"
            android:text="@string/primeirofilme"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="8dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp">

        <ImageView
            android:id="@+id/img2"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/segundo" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20sp"
            android:padding="5dp"
            android:text="@string/segundofilme"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="8dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp">

        <ImageView
            android:id="@+id/img3"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/terceiro" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20sp"
            android:padding="5dp"
            android:text="@string/terceirofilme"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="8dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp">

        <ImageView
            android:id="@+id/img4"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/quarto" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20sp"
            android:padding="5dp"
            android:text="@string/quartofilme"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="8dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp">

        <ImageView
            android:id="@+id/img5"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/quinto" />

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20sp"
            android:padding="5dp"
            android:text="@string/quintofilme"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="8dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp">

        <ImageView
            android:id="@+id/img6"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sexto" />

        <TextView
            android:id="@+id/txt6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20sp"
            android:padding="5dp"
            android:text="@string/sextofilme"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="8dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp">

        <ImageView
            android:id="@+id/img7"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/setimo" />

        <TextView
            android:id="@+id/txt7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20sp"
            android:padding="5dp"
            android:text="@string/setimofilme"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="8dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp">

        <ImageView
            android:id="@+id/img8"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/oitavo" />

        <TextView
            android:id="@+id/txt8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20sp"
            android:padding="5dp"
            android:text="@string/oitavofilme"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>





</LinearLayout>

</ScrollView>